Project

General

Profile

Actions

Bug #6255

closed

RUBY_LIB_PREFIX in missing/alloca.c

Bug #6255: RUBY_LIB_PREFIX in missing/alloca.c

Added by kimuraw (Wataru Kimura) over 14 years ago. Updated over 14 years ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 2.0.0dev (2012-04-04) [powerpc-darwin8.11.0]
Backport:
[ruby-dev:45492]

Description

木村といいます。

missing/alloca.cに

61 #ifdef RUBY_LIB_PREFIX
62 #define xmalloc ruby_xmalloc
63 #define xfree ruby_xfree
64 #endif

というコードがありますが、trunkではRUBY_LIB_PREFIXが
ruby/config.hからverconf.h (version.c)に移されていて、
これはmissing/alloca.cから参照されません。

このifdefは必ず偽になるのではないでしょうか。
だとしたらコードの意図が実現されていないのではないかと思うのです。

ppc Macでtrunk(r35238)をコンパイルしようとして #2735 と同じエラーが
でたのを調べていて気付きました。

Updated by nobu (Nobuyoshi Nakada) over 14 years ago Actions #1

  • Status changed from Open to Closed
  • % Done changed from 0 to 100

This issue was solved with changeset r35240.
Wataru, thank you for reporting this issue.
Your contribution to Ruby is greatly appreciated.
May Ruby be with you.


  • missing/alloca.c (xmalloc, xfree): use ruby version, not
    depending on RUBY_LIB_PREFIX. [ruby-dev:45492][Bug #6255]
Actions

Also available in: PDF Atom