* missing/alloca.c (xmalloc, xfree): use ruby version, not   depending on RUBY_LIB_PREFIX.  [ruby-dev:45492][Bug #6255]

git-svn-id: svn+ssh://ci.ruby-lang.org/ruby/trunk@35240 b2dd03c8-39d4-4d8f-98ff-823fe69b080e