missing/alloca.c
@@ -58,10 +58,8 @@ typedef char	*pointer;		/* generic pointer type */
 #define	NULL	0			/* null pointer constant */
 #endif
 
-#ifdef RUBY_LIB_PREFIX
 #define xmalloc ruby_xmalloc
 #define xfree ruby_xfree
-#endif
 
 extern void	xfree();
 extern pointer	xmalloc();
